# apptop

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
pkg/deb/: control.in  copyright
pkg/rpm/: apptop.spec
src/: app.rs  identify.rs  main.rs  proc.rs  ui.rs
