[package]
name = "apptop"
version = "0.1.0"
edition = "2024"
description = "A top-like utility that aggregates memory usage by application"
license = "Unlicense"
repository = "https://github.com/sklochkov2/apptop"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
libc = "0.2"
ratatui = "0.29"

[profile.release]
lto = true
strip = true
